# Testing_Task

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  EpollServer.cpp  EpollServer.h  Makefile  README.md  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h  main.cpp
packaging/: Testing_Task.service  postinst  postrm
